--- a/css/default.desktop.css
+++ b/css/default.desktop.css
@@ -410,7 +410,22 @@ a.control_next {
 }
 
 /* line 1, ../sass/_scrollBackground.scss */
-.picture {
+.pictureOne {
+  position: relative;
+  border: 1px solid black;
+  overflow: hidden;
+  height: 500px;
+  width: 100%;
+  max-height: 700px;
+  background: url("http://i.kinja-img.com/gawker-media/image/upload/t_original/ijchtclpgiqi3yuypnba.jpg");
+  background-position: 0px -800px, center;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  /* transform: scale(0.5); */
+  background-size: cover;
+}
+
+.pictureTwo {
   position: relative;
   border: 1px solid black;
   overflow: hidden;
@@ -420,6 +435,7 @@ a.control_next {
   background: url("../img/depth.jpg");
   background-position: 0px -800px, center;
   margin: 0 auto;
+  background-repeat: no-repeat;
   /* transform: scale(0.5); */
   background-size: cover;
 }
