--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -142,7 +142,8 @@ of those sections to manage the look and feel of the site. */
 }
 
 .logo-center img {
-    width: 100px;
+    width: 60px;
+    margin: 0px 5px 0px 5px;
     border-radius: 20px;
 }
 
